--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body::before {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.4);
-    backdrop-filter: blur(25px);
+    backdrop-filter: blur(0px);
     z-index: -99;
 }
 
@@ -46,7 +46,7 @@ body::before {
 .digit-container {
     position: relative;
     width: 65px;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 .clock {
