--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ body::before {
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0,0.4);
-    backdrop-filter: blur(0px);
+    backdrop-filter: blur(25px);
     z-index: -99;
 }
 
@@ -42,6 +42,7 @@ body::before {
     font-size: 50px;
     font-weight: 500;
     user-select: none;
+    opacity: 0.7;
 }
 
 .digit-container {
