--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,7 @@ html, body {
 body {
     width: 100vw;
     height: 100vh;
-    background-image: url('https://source.unsplash.com/random/?nature');
-    background-size: cover;
-    background-position: top, center;
-    background-repeat: no-repeat;
+    background-color: black;
     z-index: -100;
 
     display: flex;
@@ -24,15 +21,24 @@ body {
     justify-content: center;
 }
 
-body::before {
-    content: "";
+.bg-img, .bg-blur {
     position: fixed;
-    
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.4);
+    left: 0px;
+    top: 0px;
+    width: 100vw;
+    height: 100vh;
+}
+
+.bg-img {
+    background-size: cover;
+    background-position: top, center;
+    background-repeat: no-repeat;
+    background-image: url('https://source.unsplash.com/random/?nature')
+}
+
+.bg-blur {
+    background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(25px);
-    z-index: -99;
 }
 
 .container {
@@ -48,7 +54,6 @@ body::before {
 .digit-container {
     position: relative;
     width: 65px;
-    /* overflow: hidden; */
 }
 
 .clock {
@@ -56,20 +61,4 @@ body::before {
     width: 100%;
     left: 0px;
     text-align: center;
-    /* top: 0px; */
-    /* animation: 0.5s ease-in-out 0s forwards hide; */
 }
-
-
-
-
-
-/* @keyframes hide {
-    0% {
-        top: 0px;
-    }
-    
-    100% {
-        top: -100%;
-    }
-} */
