--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
+
+
 * {
     font-family: "Inter";
     color: white;
@@ -14,11 +16,21 @@ body {
     width: 100vw;
     height: 100vh;
     background-color: black;
-    z-index: -100;
+    /* z-index: -100; */
 
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+p {
+    margin: 0px;
+}
+
+hr {
+    width: 100%;
+    margin: 5px 0px;
+    border: 1px solid rgba(255,255,255,0.2)
 }
 
 .bg-img, .bg-blur {
@@ -33,11 +45,13 @@ body {
     background-size: cover;
     background-position: top, center;
     background-repeat: no-repeat;
-    background-image: url('https://source.unsplash.com/random/?nature')
+    background-image: url('https://source.unsplash.com/random/?nature');
+    z-index: -100;
 }
 
 .bg-blur {
-    background-color: rgba(0, 0, 0, 0.3);
+    z-index: -99;
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(25px);
 }
 
@@ -53,7 +67,8 @@ body {
 
 .digit-container {
     position: relative;
-    width: 65px;
+    color: transparent;
+    /* width: 65px; */
 }
 
 .clock {
@@ -61,4 +76,97 @@ body {
     width: 100%;
     left: 0px;
     text-align: center;
+}
+
+#settings-container {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 10px;
+    opacity: 1;
+}
+
+#settings-button {
+    margin: 0px;
+    padding: 0px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    opacity: 1;
+
+}
+
+#options-container {
+    width: 300px;
+    position: relative;
+    border-radius: 15px;
+    margin: 0px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+
+    background-color: rgba(0,0,0,0.3);
+    backdrop-filter: blur(50px);
+
+    border: 1px solid rgba(255,255,255,0.2);
+
+    font-size: 20px;
+    transition: opacity 400ms, top 400ms cubic-bezier(.7,.2,.1,.5);
+}
+
+#options-container[data-toggled="0"] {
+    opacity: 0;
+    top: 25px;
+    /* transition: opacity 400ms, top 400ms cubic-bezier(.2,.7,.5,1); */
+}
+
+#options-container[data-toggled="1"] {
+    opacity: 1;
+    top: 0px;
+    
+}
+
+.slider {
+    -webkit-appearance: none;
+    appearance: none; 
+    width: 100%;
+    cursor: pointer;
+    outline: none;
+    overflow: hidden;
+    border-radius: 6px;
+    background: transparent;
+}
+  
+.slider::-webkit-slider-runnable-track {
+    height: 12px;
+    background: rgba(0,0,0,0.1);
+    backdrop-filter: blur(50px);
+    border-radius: 6px;
+}
+  
+.slider::-moz-range-track {
+    height: 12px;
+    background: #ccc;
+    border-radius: 6px;
+}
+  
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none; 
+    height: 0px;
+    width: 0px;
+    background-color: #fff;
+    box-shadow: -1000px 0 0 1000px #fff;
+}
+  
+.slider::-moz-range-thumb {
+    height: 0px;
+    width: 0px;
+    background-color: #fff;
+    box-shadow: -1000px 0 0 1000px #fff;
 }
